[package]
name = "gcmt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.5"
dialoguer = "0.10.4"
lazy_static = "1.4.0"
serde = {version = "1.0.163", features = ["derive"]}
toml = "0.7.3"

